:wheelchair: 优化“表格存储”公用方法